<resources>
    <string name="app_name">Quiz</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="manage_account">Manage Account</string>
    <string name="your_profile">Your profile</string>
    <string name="change_profile_here">Change profile here</string>
    <string name="change_password">Change password</string>
    <string name="change_password_here">Change password here</string>
    <string name="log_out">Log out</string>
    <string name="enter_date">ENTER DATE</string>
    <string name="enter_time_start">ENTER TIME START</string>
    <string name="enter_duration">ENTER DURATION</string>
    <string name="enter_test_name">ENTER TEST NAME</string>
    <string name="confirm">CONFIRM</string>
    <string name="test_name">Test name</string>
    <string name="time_start">Time start</string>
    <string name="duration_minute">Duration (minute)</string>
    <string name="date">Date</string>
    <string name="mix_question_and_answer">Mix question and answer</string>
    <string name="chatroom">Chatroom</string>
    <string name="aa">Aa</string>
    <string name="no">No</string>
    <string name="would_you_like_to_logout">Would you like to logout?</string>
    <string name="would_you_like_to_exit_the_test">Would you like to exit the test?</string>
    <string name="exit">EXIT</string>
    <string name="hello">HELLO</string>
    <string name="enter_test_id">Enter test ID</string>
    <string name="find">FIND</string>
    <string name="join_this_test_as">Join this test as</string>
    <string name="name">Name</string>
    <string name="login">Login</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">SIGN UP</string>
    <string name="copy_id">COPY ID</string>
    <string name="test_id">Test ID</string>
    <string name="result">RESULT</string>
    <string name="delete">DELETE</string>
    <string name="manage">MANAGE</string>
    <string name="prev">Prev</string>
    <string name="submit">Submit</string>
    <string name="next">Next</string>
    <string name="user_name">User name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">REGISTER</string>
    <string name="session_expired_please_login_again">Session expired, please login again !</string>
    <string name="ok">OK</string>
    <string name="joined_tests">Joined Tests</string>
    <string name="cancel">CANCEL</string>
    <string name="would_you_like_to_submit_answer">Would you like to submit answer?</string>
    <string name="add">ADD</string>
    <string name="there_is_no_test">There is no test</string>
    <string name="your_tests">Your Tests</string>
    <string name="id">ID</string>
    <string name="time_finish">TIME FINISH</string>
    <string name="duration">DURATION</string>
    <string name="score">SCORE</string>
</resources>