<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="300dp"
        android:layout_height="544dp"
        android:background="@drawable/alert_dialog"
        android:orientation="vertical">


        <EditText
            android:id="@+id/etDate"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/username_edit_text_selector"
            android:ems="10"
            android:gravity="center_vertical"
            android:hint="@string/enter_date"
            android:inputType="datetime"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textColor="#ececec "
            android:textColorHint="#B3119E9D"
            android:textSize="14sp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView13" />

        <TextView
            android:id="@+id/tvTimeStart"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/username_edit_text_selector"
            android:ems="10"
            android:gravity="center_vertical"
            android:hint="@string/enter_time_start"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textColor="#ececec "
            android:textColorHint="#B3119E9D"
            android:textSize="14sp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView11" />

        <EditText
            android:id="@+id/etDuration"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/username_edit_text_selector"
            android:ems="10"
            android:gravity="center_vertical"
            android:hint="@string/enter_duration"
            android:inputType="number"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textColor="#ececec "
            android:textColorHint="#B3119E9D"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView12" />

        <EditText
            android:id="@+id/etTestName"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/username_edit_text_selector"
            android:ems="10"
            android:gravity="center_vertical"
            android:hint="@string/enter_test_name"
            android:inputType="textPersonName"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textColor="#ececec "
            android:textColorHint="#B3119E9D"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />

        <TextView
            android:id="@+id/tvFile"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="28dp"
            android:fontFamily="sans-serif-black"
            android:gravity="center_vertical"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.107"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnCancelAddTest"
            android:layout_width="110dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:background="@drawable/login_button_selector"
            android:backgroundTint="#31353e "
            android:text="@string/cancel"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cbMix"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/btnConfirmAddTest"
            android:layout_width="110dp"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:background="@drawable/login_button_selector"
            android:backgroundTint="#4e42fa "
            android:text="@string/confirm"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/btnCancelAddTest"
            app:layout_constraintTop_toBottomOf="@+id/etDate"
            app:layout_constraintVertical_bias="0.661" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/test_name"
            android:textColor="#ececec "
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvFile" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/time_start"
            android:textColor="#ececec "
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etTestName" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/duration_minute"
            android:textColor="#ececec "
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTimeStart" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/date"
            android:textColor="#ececec "
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etDuration" />

        <CheckBox
            android:id="@+id/cbMix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/mix_question_and_answer"
            android:textColor="#ececec "
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etDate" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>