<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/alert_dialog" >

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/username_edit_text_selector"
        android:drawableStart="@drawable/ic_account_profile"
        android:drawablePadding="10dp"
        android:drawableTint="#776A6A"
        android:elevation="1dp"
        android:ems="10"
        android:hint="@string/user_name"
        android:inputType="textPersonName"
        android:paddingStart="20dp"
        android:paddingEnd="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/username_edit_text_selector"
        android:drawableStart="@drawable/ic_baseline_email"
        android:drawablePadding="10dp"
        android:drawableTint="#776A6A"
        android:elevation="1dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="20dp"
        android:paddingEnd="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etUsername" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/username_edit_text_selector"
        android:drawableStart="@drawable/ic_profile_lock"
        android:drawablePadding="10dp"
        android:drawableTint="#776A6A"
        android:elevation="1dp"
        android:ems="10"

        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:paddingEnd="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmail" />

    <View
        android:layout_width="300dp"
        android:layout_height="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnConfirm"
        android:layout_width="150dp"
        android:layout_height="46dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/login_button_selector"
        android:text="@string/register"
        android:textColor="#FDFDFD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassword" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCancel"
        android:layout_width="150dp"
        android:layout_height="46dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/login_button_selector"
        android:backgroundTint="#6C6565"
        android:text="@string/cancel"
        android:textColor="#FDFDFD"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnConfirm"
        app:layout_constraintVertical_bias="0.292" />

</androidx.constraintlayout.widget.ConstraintLayout>